src/objects/Charket__WeChatMessage__c.object
<CustomObject>
    <fields>
        <fullName>Charket__QuickReplyType__c</fullName>
        <label>Quick Reply Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__StructuredMessageType__c</fullName>
        <label>Structured Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WeChat</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__TextBody__c</fullName>
        <label>Text Body</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__TimesUsed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Times Used</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text Message</fullName>
                    <default>true</default>
                    <label>Text Message</label>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Voice Message</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Structured Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipLabel>WeChat Messages</relationshipLabel>
        <relationshipName>WeChatMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatLastModifiedTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>WeChat Last Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatMediaId__c</fullName>
        <externalId>true</externalId>
        <label>WeChat Media ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>WeChat Message</label>
    <listViews>
        <fullName>Charket__All1</fullName>
        <columns>NAME</columns>
        <columns>Charket__TextBody__c</columns>
        <columns>Charket__Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Charket__Text_Message_Body_Can_Not_Be_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Charket__Type__c ,&apos;Text Message&apos;),ISBLANK( Charket__TextBody__c))</errorConditionFormula>
        <errorDisplayField>Charket__TextBody__c</errorDisplayField>
        <errorMessage>Text Body is required if Message is a text message.</errorMessage>
    </validationRules>
</CustomObject>